<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="kr.djgis.sspfs.ui.feature.FeatureFragmentEdit">

  <data>

    <variable
        name="viewModel"
        type="kr.djgis.sspfs.model.FeatureViewModel" />
  </data>

  <androidx.core.widget.NestedScrollView
      android:id="@+id/nested_scrollview"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:paddingHorizontal="10dp"
      android:paddingVertical="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <LinearLayout
          android:id="@+id/form_view"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:paddingTop="20dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/feature_pk4_dropdown"
            style="@style/App.TextInputLayout.Dropdown"
            android:layout_weight="1"
            android:hint="@string/hint_pk4">

          <AutoCompleteTextView
              android:id="@+id/feature_pk4"
              style="@style/App.TextInputEditText"
              android:enabled="false"
              android:inputType="none"
              android:nextFocusForward="@id/feature_a1"
              android:text="@{viewModel.fromPK4(viewModel.feature.pk4)}"
              tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/App.TextInputLayout.Disabled"
            android:layout_weight="1"
            android:hint="@string/hint_id">

          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/feature_id"
              style="@style/App.TextInputEditText.Disabled"
              android:enabled="false"
              android:text="@{viewModel.feature.id}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/feature_a1_layout"
            style="@style/App.TextInputLayout.Disabled"
            android:layout_weight="1"
            android:hint="@string/hint_a1"
            app:endIconDrawable="@drawable/ic_round_help_outline_24"
            app:endIconMode="custom"
            app:endIconTint="@color/green_300">

          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/feature_a1"
              style="@style/App.TextInputEditText.Disabled"
              android:enabled="false"
              android:nextFocusForward="@id/feature_a2"
              android:text="@{viewModel.feature.a1}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/App.TextInputLayout"
            android:layout_weight="1"
            android:hint="@string/hint_a2">

          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/feature_a2"
              style="@style/App.TextInputEditText"
              android:nextFocusForward="@id/feature_e1"
              android:text="@{viewModel.feature.a2}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/feature_d1_layout"
            style="@style/App.TextInputLayout.Disabled"
            android:layout_weight="1"
            android:hint="@string/hint_d1"
            app:helperText="위치가 변경되면 자동으로 지정됩니다">

          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/feature_d1"
              style="@style/App.TextInputEditText.Disabled"
              android:enabled="false"
              android:inputType="textImeMultiLine|textMultiLine"
              android:text="@{viewModel.feature.d1}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:text="@string/button_d1"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/App.TextInputLayout"
            android:layout_weight="1"
            android:hint="@string/hint_e1"
            app:prefixText="B "
            app:suffixText="m">

          <!--android:text="@{feature.pk1_2}"-->
          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/feature_e1"
              style="@style/App.TextInputEditText"
              android:inputType="numberDecimal|number"
              android:nextFocusForward="@id/feature_e2"
              android:text="@{viewModel.feature.e1}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/App.TextInputLayout"
            android:layout_weight="1"
            android:hint="@string/hint_e2"
            app:prefixText="H "
            app:suffixText="m">

          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/feature_e2"
              style="@style/App.TextInputEditText"
              android:inputType="numberDecimal"
              android:nextFocusForward="@id/feature_e3"
              android:text="@{viewModel.feature.e2}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/App.TextInputLayout"
            android:layout_weight="1"
            android:hint="@string/hint_e3"
            app:prefixText=""
            app:suffixText="련">

          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/feature_e3"
              style="@style/App.TextInputEditText"
              android:inputType="number"
              android:nextFocusForward="@id/feature_g1"
              android:text="@{viewModel.feature.e3}" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--                <com.google.android.material.textfield.TextInputLayout-->
        <!--                    android:id="@+id/feature_f1_layout"-->
        <!--                    style="@style/App.TextInputLayout"-->
        <!--                    android:hint="시설부속물 (유형별)"-->
        <!--                    app:endIconDrawable="@drawable/ic_round_help_outline_24"-->
        <!--                    app:endIconMode="custom"-->
        <!--                    app:endIconTint="@color/light_green_A700">-->

        <!--                    <com.google.android.material.textfield.TextInputEditText-->
        <!--                        android:id="@+id/feature_f1"-->
        <!--                        style="@style/App.TextInputEditText"-->
        <!--                        android:nextFocusForward="@id/feature_f2"-->
        <!--                        android:text="@{viewModel.feature.f1}" />-->
        <!--                </com.google.android.material.textfield.TextInputLayout>-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/feature_g1_layout"
            style="@style/App.TextInputLayout"
            android:hint="@string/hint_g1"
            app:endIconDrawable="@drawable/ic_round_mic_30"
            app:endIconMode="custom"
            app:endIconTint="@color/deep_orange_A400">

          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/feature_g1"
              style="@style/App.TextInputEditText"
              android:imeOptions="actionDone"
              android:inputType="textImeMultiLine|textMultiLine"
              android:text="@{viewModel.feature.g1}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/App.TextInputLayout.Disabled"
            android:layout_weight="1"
            android:hint="@string/hint_a5"
            app:helperText="@string/helper_a5">

          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/feature_a5"
              style="@style/App.TextInputEditText.Disabled"
              android:enabled="false"
              android:nextFocusForward="@id/feature_a6"
              android:text="@{viewModel.feature.a5}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/feature_a6_layout"
            style="@style/App.TextInputLayout.Disabled"
            android:layout_weight="1"
            android:hint="@string/hint_a6"
            app:endIconMode="none"
            app:helperText="@string/helper_a6">

          <com.google.android.material.textfield.MaterialAutoCompleteTextView
              android:id="@+id/feature_a6"
              style="@style/App.TextInputEditText.Disabled"
              android:inputType="none"
              android:text="@{viewModel.feature.dateA6}" />
        </com.google.android.material.textfield.TextInputLayout>
      </LinearLayout>

      <LinearLayout
          android:id="@+id/attachment_text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginVertical="@dimen/grid_2"
          android:gravity="center"
          android:orientation="horizontal"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/form_view">

        <ImageButton
            android:id="@+id/image_button_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_round_fast_rewind_36"
            app:tint="@color/green_300"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/textview_attachment"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/image_button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_round_fast_forward_36"
            app:tint="@color/green_300"
            tools:ignore="ContentDescription" />
      </LinearLayout>

      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/attachment_recycler_view"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginVertical="@dimen/grid_2"
          android:orientation="horizontal"
          app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
          app:layout_constraintBottom_toTopOf="@+id/feature_misc"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/attachment_text" />

      <LinearLayout
          android:id="@+id/feature_misc"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/attachment_recycler_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/grid_2"
            android:gravity="center"
            android:orientation="horizontal">

          <TextView
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:gravity="center"
              android:text="@string/textview_other"
              android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            style="@style/App.LinearLayout.Horizontal"
            android:baselineAligned="false">

          <com.google.android.material.textfield.TextInputLayout
              style="@style/App.TextInputLayout.Disabled"
              android:layout_weight="1"
              android:hint="@string/hint_a3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/feature_a3"
                style="@style/App.TextInputEditText.Disabled"
                android:nextFocusForward="@id/feature_a4"
                android:text="@{viewModel.feature.a3}" />
          </com.google.android.material.textfield.TextInputLayout>

          <com.google.android.material.textfield.TextInputLayout
              style="@style/App.TextInputLayout.Disabled"
              android:layout_weight="1"
              android:hint="@string/hint_a4">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/feature_a4"
                style="@style/App.TextInputEditText.Disabled"
                android:inputType="phone"
                android:nextFocusForward="@id/feature_e1"
                android:text="@{viewModel.feature.a4}" />
          </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/App.LinearLayout.Horizontal"
            android:baselineAligned="false">

          <com.google.android.material.textfield.TextInputLayout
              style="@style/App.TextInputLayout.Disabled"
              android:layout_weight="1"
              android:hint="@string/hint_c1"
              app:prefixText="건물 "
              app:suffixText="동">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/feature_c1"
                style="@style/App.TextInputEditText.Disabled"
                android:inputType="number"
                android:nextFocusForward="@id/feature_c2"
                android:text="@{viewModel.feature.c1}" />
          </com.google.android.material.textfield.TextInputLayout>

          <com.google.android.material.textfield.TextInputLayout
              style="@style/App.TextInputLayout.Disabled"
              android:layout_weight="1"
              android:hint="@string/hint_c2"
              app:prefixText="농경지 "
              app:suffixText="ha">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/feature_c2"
                style="@style/App.TextInputEditText.Disabled"
                android:inputType="numberDecimal"
                android:nextFocusForward="@id/feature_g1"
                android:text="@{viewModel.feature.c2}" />
          </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
      </LinearLayout>

      <LinearLayout
          android:id="@+id/spacer_bottom"
          android:layout_width="match_parent"
          android:layout_height="150dp"
          android:orientation="vertical"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/feature_misc" />
    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.core.widget.NestedScrollView>
</layout>
