<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (c) 2022 대진기술정보(주) All Rights Reserved
  -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:layoutDirection="ltr"
    tools:ignore="ContentDescription">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/photo_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cutout_safe_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="@dimen/round_button_medium"
            android:layout_height="@dimen/round_button_medium"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_round_arrow_back_36" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_large"
            android:baselineAligned="false"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_start"
                style="@style/App.MaterialButton"
                android:text="@string/image_start" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_end"
                style="@style/App.MaterialButton"
                android:text="@string/image_end" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_general"
                style="@style/App.MaterialButton"
                android:backgroundTint="@color/amber_A100"
                android:text="@string/image_general" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_delete"
                style="@style/App.MaterialButton"
                android:backgroundTint="@color/red_A100"
                android:text="@string/image_delete" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
