<?xml version="1.0" encoding="utf-8"?>

<!--
  Copyright (c) 2022 대진기술정보(주) All Rights Reserved
  -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:behavior_hideable="true"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        style="@style/Widget.Material3.CardView.Elevated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@id/grid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!--
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    &lt;!&ndash; Title, secondary and supporting text &ndash;&gt;
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="박영근"
                        android:textAppearance="?attr/textAppearanceHeadline6" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="경주시"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="도시과"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary" />

                </LinearLayout>

                &lt;!&ndash; Buttons &ndash;&gt;
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="확인" />

                    <com.google.android.material.button.MaterialButton
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="취소" />
                </LinearLayout>
            </LinearLayout>
        -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/icon_PK4_A"
                style="@style/App.TextView.Legend"
                android:contentDescription="@string/type_a"
                android:text="@string/type_a" />

            <TextView
                android:id="@+id/icon_PK4_B"
                style="@style/App.TextView.Legend"
                android:contentDescription="@string/type_b"
                android:text="@string/type_b" />

            <TextView
                android:id="@+id/icon_PK4_C"
                style="@style/App.TextView.Legend"
                android:contentDescription="@string/type_c"
                android:text="@string/type_c" />

            <TextView
                android:id="@+id/icon_PK4_D"
                style="@style/App.TextView.Legend"
                android:contentDescription="@string/type_d"
                android:text="@string/type_d" />

            <TextView
                android:id="@+id/icon_PK4_E"
                style="@style/App.TextView.Legend"
                android:contentDescription="@string/type_e"
                android:text="@string/type_e" />

            <TextView
                android:id="@+id/icon_PK4_F"
                style="@style/App.TextView.Legend"
                android:contentDescription="@string/type_f"
                android:text="@string/type_f" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <GridLayout
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alignmentMode="alignBounds"
        android:columnCount="3"
        android:orientation="horizontal"
        android:useDefaultMargins="true"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card"
        tools:ignore="HardcodedText">

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:text="강동구" />
    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
